[package]
name = "styrolite"
description = "Lightweight, programmatic sandboxing tool"
license = "Apache-2.0"
version = "0.2.2"
homepage = "https://github.com/edera-dev/styrolite"
repository = "https://github.com/edera-dev/styrolite"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.8"
libc = "0.2.182"
log = "0.4.29"
mktemp-rs = "0.2.0"
nix = { version = "0.31.2", features = ["event", "process", "signal", "user"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
async = ["dep:tokio"]

[lib]
name = "styrolite"

[[bin]]
name = "styrolite"
path = "bin/styrolite.rs"

[[bin]]
name = "styrojail"
path = "bin/styrojail.rs"

[[example]]
name = "styrolite-rundir"
path = "examples/rundir.rs"

[[example]]
name = "styrolite-attach"
path = "examples/attach.rs"
